Replicable and Planet entities #25 Updated Replicable to InventoryBag entity. Added Planet entity. Added details for planet. Tested for drag-drop.

--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -446,6 +446,9 @@
                             <DataTemplate DataType="{x:Type vm:StructureCharacterViewModel}">
                                 <views:ControlCharacter />
                             </DataTemplate>
+                            <DataTemplate DataType="{x:Type vm:StructurePlanetViewModel}">
+                                <views:ControlPlanet />
+                            </DataTemplate>
                             <DataTemplate DataType="{x:Type vm:StructureVoxelViewModel}">
                                 <views:ControlVoxel />
                             </DataTemplate>
@@ -458,8 +461,8 @@
                             <DataTemplate DataType="{x:Type vm:StructureMeteorViewModel}">
                                 <views:ControlMeteor />
                             </DataTemplate>
-                            <DataTemplate DataType="{x:Type vm:StructureReplicableViewModel}">
-                                <views:ControlReplicable />
+                            <DataTemplate DataType="{x:Type vm:StructureInventoryBagViewModel}">
+                                <views:ControlInventoryBag />
                             </DataTemplate>
                             <DataTemplate DataType="{x:Type vm:StructureUnknownViewModel}">
                                 <views:ControlUnknown />
