--- a/Main/SEToolbox/SEToolbox/Views/ControlInventoryBag.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlInventoryBag.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SEToolbox.Views.ControlReplicable"
+﻿<UserControl x:Class="SEToolbox.Views.ControlInventoryBag"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -18,10 +18,10 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label Grid.ColumnSpan="2">Replicable</Label>
+        <Label Grid.ColumnSpan="2">InventoryBag</Label>
         <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0" Margin="2">
             <TextBox.Text>
-                <MultiBinding StringFormat="{x:Static props:Resources.ReplicableDetail}" Mode="OneWay">
+                <MultiBinding StringFormat="{x:Static props:Resources.InventoryBagDetail}" Mode="OneWay">
                     <Binding Path="DisplayName"/>
                     <Binding Path="PlayerDistance"/>
                 </MultiBinding>
