Fixed text template

--- a/Main/SEToolbox/SEToolbox/Interop/SubtypeId.tt
+++ b/Main/SEToolbox/SEToolbox/Interop/SubtypeId.tt
@@ -2,7 +2,7 @@
 <#@ assembly name="System.Core" #>
 <#@ assembly name="System.Xml" #>
 <#@ assembly name="$(TargetDir)SEToolbox.exe" #>
-<#@ assembly name="$(TargetDir)Sandbox.Common.XmlSerializers.dll" #>
+<#@ assembly name="$(TargetDir)SpaceEngineers.ObjectBuilders.XmlSerializers.dll" #>
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.IO" #>
