--- a/Main/SEToolbox/SEToolboxSetup/Product.wxs
+++ b/Main/SEToolbox/SEToolboxSetup/Product.wxs
@@ -46,6 +46,8 @@
               <RemoveFile Id="PurgeAppFolder" Name="*.*" On="uninstall" />
 
               <RemoveFile Id="fileB618365481BD47F5A21AA2A60F2C9AA4" Name="HavokWrapper.dll" On="install"/>
+              <RemoveFile Id="fileBB8CDBE0025D4F299FF4F0FC84996D5A" Name="msvcp120.dll" On="install"/>
+              <RemoveFile Id="file8F379924D24745828B0013B8E95CAD54" Name="msvcr120.dll" On="install"/>
               <RemoveFile Id="file61275B9FC2AE484BA7A2BDB7459A3647" Name="Sandbox.Common.dll" On="install"/>
               <RemoveFile Id="file9BC4F4C590AF4888B721F2301140EB5A" Name="Sandbox.Game.dll" On="install"/>
               <RemoveFile Id="file882FC5E56A994EC1AFBBCBA50226393C" Name="Sandbox.Graphics.dll" On="install"/>
